Added highlight.js to syntax highlight the JavaScript code at the output.
Syntax highlighting with GitHub theme.

--- a/css/index.css
+++ b/css/index.css
@@ -1,2 +1,3 @@
-#plantUML, #generated { height: 400px; width: 400px; font: 10px 'Monaco'; }
+#plantUML, #generated { height: 400px; width: 400px; font: 10px 'Monaco'; overflow: auto }
 #generate { height: 100px; width: 816px }
+pre { display: inline-block; }
